// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render histogram when showHistogram is set to false 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 16px;
  color: #424242;
  width: 100%;
}

.emotion-0 input,
.emotion-0 button,
.emotion-0 textarea,
.emotion-0 select {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
}

.emotion-0 *,
.emotion-0 *:before,
.emotion-0 *:after {
  box-sizing: border-box;
}

.emotion-4 .rheostat {
  overflow: visible;
  margin: 24px 12px;
}

.emotion-4 .rheostat-progress {
  background-color: #d8d8d8;
  position: absolute;
  background-color: #0B6AFF;
}

.emotion-4 .rheostat-handle {
  border: 1px solid #9a9a9a;
  background-color: #0B6AFF;
  background-color: #fff;
  border-radius: 50%;
  height: 24px;
  outline: none;
  z-index: 2;
  width: 24px;
  cursor: pointer;
}

.emotion-4 .rheostat-horizontal {
  height: 24px;
}

.emotion-4 .rheostat-background {
  height: 4px;
  background-color: #c7c7c7;
  top: 0px;
  width: 100%;
  position: relative;
}

.emotion-4 .rheostat-horizontal .rheostat-progress {
  height: 4px;
  top: 0;
}

.emotion-4 .rheostat-horizontal .rheostat-handle {
  margin-left: -12px;
  top: -10px;
}

.emotion-4 .slider-tooltip,
.emotion-4 .slider-tooltip-focus,
.emotion-4 .slider-tooltip-visible {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 6px 8px;
  position: absolute;
  z-index: 1;
  -webkit-transform: translate(-50%,-170%);
  -ms-transform: translate(-50%,-170%);
  transform: translate(-50%,-170%);
}

.emotion-4 .slider-tooltip-visible {
  visibility: visible;
}

.emotion-4 .slider-tooltip:after,
.emotion-4 .slider-tooltip-focus:after,
.emotion-4 .slider-tooltip-visible:after {
  content: '';
  position: absolute;
  top: 98%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip,
.emotion-4 .rheostat-handle:focus .slider-tooltip,
.emotion-4 .rheostat-handle:active .slider-tooltip {
  visibility: visible;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip-focus {
  visibility: hidden;
}

.emotion-4 .rheostat-handle:focus .slider-tooltip-focus,
.emotion-4 .rheostat-handle:active .slider-tooltip-focus {
  visibility: visible;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  position: absolute;
  top: -25px;
  left: 0;
  margin-left: 3px;
}

.emotion-9 {
  position: absolute;
  top: -25px;
  right: 0;
  margin-right: 3px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-11 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-13 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-15 {
  width: 100%;
  line-height: 1.5;
  min-height: 42px;
  padding: 8px 12px;
  border: 1px solid #ccc;
  background-color: #fafafa;
  font-size: 0.9rem;
  outline: none;
  height: 100%;
}

.emotion-15:focus {
  background-color: #fff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-17 svg.cancel-icon:hover {
  fill: #424242;
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-3"
    style={undefined}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="rheostat rheostat-horizontal "
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="rheostat-background"
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={30000}
          className="rheostat-handle"
          data-handle-key={0}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "0%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={50000}
          className="rheostat-handle"
          data-handle-key={1}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "100%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <div
          className="rheostat-progress"
          style={
            Object {
              "left": "0%",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-7 emotion-8"
        >
          30K
        </div>
        <div
          className="emotion-9 emotion-8"
        >
          50K
        </div>
      </div>
    </div>
    <div
      className="emotion-11 emotion-12"
    >
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-start-input"
          className="emotion-15 emotion-16"
          max={50000}
          name="start"
          onChange={[Function]}
          step={1}
          type="number"
          value={30000}
        />
      </div>
      <div
        className="emotion-17 emotion-12"
      >
        -
      </div>
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-end-input"
          className="emotion-15 emotion-16"
          min={30000}
          name="end"
          onChange={[Function]}
          step={1}
          type="number"
          value={50000}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should not render slider when ShowSlider is false 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 16px;
  color: #424242;
  width: 100%;
}

.emotion-0 input,
.emotion-0 button,
.emotion-0 textarea,
.emotion-0 select {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
}

.emotion-0 *,
.emotion-0 *:before,
.emotion-0 *:after {
  box-sizing: border-box;
}

.emotion-4 .rheostat {
  overflow: visible;
  margin: 24px 12px;
}

.emotion-4 .rheostat-progress {
  background-color: #d8d8d8;
  position: absolute;
  background-color: #0B6AFF;
}

.emotion-4 .rheostat-handle {
  border: 1px solid #9a9a9a;
  background-color: #0B6AFF;
  background-color: #fff;
  border-radius: 50%;
  height: 24px;
  outline: none;
  z-index: 2;
  width: 24px;
  cursor: pointer;
}

.emotion-4 .rheostat-horizontal {
  height: 24px;
}

.emotion-4 .rheostat-background {
  height: 4px;
  background-color: #c7c7c7;
  top: 0px;
  width: 100%;
  position: relative;
}

.emotion-4 .rheostat-horizontal .rheostat-progress {
  height: 4px;
  top: 0;
}

.emotion-4 .rheostat-horizontal .rheostat-handle {
  margin-left: -12px;
  top: -10px;
}

.emotion-4 .slider-tooltip,
.emotion-4 .slider-tooltip-focus,
.emotion-4 .slider-tooltip-visible {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 6px 8px;
  position: absolute;
  z-index: 1;
  -webkit-transform: translate(-50%,-170%);
  -ms-transform: translate(-50%,-170%);
  transform: translate(-50%,-170%);
}

.emotion-4 .slider-tooltip-visible {
  visibility: visible;
}

.emotion-4 .slider-tooltip:after,
.emotion-4 .slider-tooltip-focus:after,
.emotion-4 .slider-tooltip-visible:after {
  content: '';
  position: absolute;
  top: 98%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip,
.emotion-4 .rheostat-handle:focus .slider-tooltip,
.emotion-4 .rheostat-handle:active .slider-tooltip {
  visibility: visible;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip-focus {
  visibility: hidden;
}

.emotion-4 .rheostat-handle:focus .slider-tooltip-focus,
.emotion-4 .rheostat-handle:active .slider-tooltip-focus {
  visibility: visible;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-6 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-8 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-10 {
  width: 100%;
  line-height: 1.5;
  min-height: 42px;
  padding: 8px 12px;
  border: 1px solid #ccc;
  background-color: #fafafa;
  font-size: 0.9rem;
  outline: none;
  height: 100%;
}

.emotion-10:focus {
  background-color: #fff;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-12 svg.cancel-icon:hover {
  fill: #424242;
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-3"
    style={undefined}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    />
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-7"
        direction="column"
      >
        <input
          aria-label="range-input-test-start-input"
          className="emotion-10 emotion-11"
          max={50000}
          name="start"
          onChange={[Function]}
          step={1}
          type="number"
          value={30000}
        />
      </div>
      <div
        className="emotion-12 emotion-7"
      >
        -
      </div>
      <div
        className="emotion-8 emotion-7"
        direction="column"
      >
        <input
          aria-label="range-input-test-end-input"
          className="emotion-10 emotion-11"
          min={30000}
          name="end"
          onChange={[Function]}
          step={1}
          type="number"
          value={50000}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render histogram when showHistogram is set to true 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 16px;
  color: #424242;
  width: 100%;
}

.emotion-0 input,
.emotion-0 button,
.emotion-0 textarea,
.emotion-0 select {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
}

.emotion-0 *,
.emotion-0 *:before,
.emotion-0 *:after {
  box-sizing: border-box;
}

.emotion-4 .rheostat {
  overflow: visible;
  margin: 24px 12px;
}

.emotion-4 .rheostat-progress {
  background-color: #d8d8d8;
  position: absolute;
  background-color: #0B6AFF;
}

.emotion-4 .rheostat-handle {
  border: 1px solid #9a9a9a;
  background-color: #0B6AFF;
  background-color: #fff;
  border-radius: 50%;
  height: 24px;
  outline: none;
  z-index: 2;
  width: 24px;
  cursor: pointer;
}

.emotion-4 .rheostat-horizontal {
  height: 24px;
}

.emotion-4 .rheostat-background {
  height: 4px;
  background-color: #c7c7c7;
  top: 0px;
  width: 100%;
  position: relative;
}

.emotion-4 .rheostat-horizontal .rheostat-progress {
  height: 4px;
  top: 0;
}

.emotion-4 .rheostat-horizontal .rheostat-handle {
  margin-left: -12px;
  top: -10px;
}

.emotion-4 .slider-tooltip,
.emotion-4 .slider-tooltip-focus,
.emotion-4 .slider-tooltip-visible {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 6px 8px;
  position: absolute;
  z-index: 1;
  -webkit-transform: translate(-50%,-170%);
  -ms-transform: translate(-50%,-170%);
  transform: translate(-50%,-170%);
}

.emotion-4 .slider-tooltip-visible {
  visibility: visible;
}

.emotion-4 .slider-tooltip:after,
.emotion-4 .slider-tooltip-focus:after,
.emotion-4 .slider-tooltip-visible:after {
  content: '';
  position: absolute;
  top: 98%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip,
.emotion-4 .rheostat-handle:focus .slider-tooltip,
.emotion-4 .rheostat-handle:active .slider-tooltip {
  visibility: visible;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip-focus {
  visibility: hidden;
}

.emotion-4 .rheostat-handle:focus .slider-tooltip-focus,
.emotion-4 .rheostat-handle:active .slider-tooltip-focus {
  visibility: visible;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  position: absolute;
  top: -25px;
  left: 0;
  margin-left: 3px;
}

.emotion-9 {
  position: absolute;
  top: -25px;
  right: 0;
  margin-right: 3px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-11 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-13 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-15 {
  width: 100%;
  line-height: 1.5;
  min-height: 42px;
  padding: 8px 12px;
  border: 1px solid #ccc;
  background-color: #fafafa;
  font-size: 0.9rem;
  outline: none;
  height: 100%;
}

.emotion-15:focus {
  background-color: #fff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-17 svg.cancel-icon:hover {
  fill: #424242;
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-3"
    style={undefined}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="rheostat rheostat-horizontal "
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="rheostat-background"
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={30000}
          className="rheostat-handle"
          data-handle-key={0}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "0%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={50000}
          className="rheostat-handle"
          data-handle-key={1}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "100%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <div
          className="rheostat-progress"
          style={
            Object {
              "left": "0%",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-7 emotion-8"
        >
          30K
        </div>
        <div
          className="emotion-9 emotion-8"
        >
          50K
        </div>
      </div>
    </div>
    <div
      className="emotion-11 emotion-12"
    >
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-start-input"
          className="emotion-15 emotion-16"
          max={50000}
          name="start"
          onChange={[Function]}
          step={1}
          type="number"
          value={30000}
        />
      </div>
      <div
        className="emotion-17 emotion-12"
      >
        -
      </div>
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-end-input"
          className="emotion-15 emotion-16"
          min={30000}
          name="end"
          onChange={[Function]}
          step={1}
          type="number"
          value={50000}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render range labels 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 16px;
  color: #424242;
  width: 100%;
}

.emotion-0 input,
.emotion-0 button,
.emotion-0 textarea,
.emotion-0 select {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
}

.emotion-0 *,
.emotion-0 *:before,
.emotion-0 *:after {
  box-sizing: border-box;
}

.emotion-4 .rheostat {
  overflow: visible;
  margin: 24px 12px;
}

.emotion-4 .rheostat-progress {
  background-color: #d8d8d8;
  position: absolute;
  background-color: #0B6AFF;
}

.emotion-4 .rheostat-handle {
  border: 1px solid #9a9a9a;
  background-color: #0B6AFF;
  background-color: #fff;
  border-radius: 50%;
  height: 24px;
  outline: none;
  z-index: 2;
  width: 24px;
  cursor: pointer;
}

.emotion-4 .rheostat-horizontal {
  height: 24px;
}

.emotion-4 .rheostat-background {
  height: 4px;
  background-color: #c7c7c7;
  top: 0px;
  width: 100%;
  position: relative;
}

.emotion-4 .rheostat-horizontal .rheostat-progress {
  height: 4px;
  top: 0;
}

.emotion-4 .rheostat-horizontal .rheostat-handle {
  margin-left: -12px;
  top: -10px;
}

.emotion-4 .slider-tooltip,
.emotion-4 .slider-tooltip-focus,
.emotion-4 .slider-tooltip-visible {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 6px 8px;
  position: absolute;
  z-index: 1;
  -webkit-transform: translate(-50%,-170%);
  -ms-transform: translate(-50%,-170%);
  transform: translate(-50%,-170%);
}

.emotion-4 .slider-tooltip-visible {
  visibility: visible;
}

.emotion-4 .slider-tooltip:after,
.emotion-4 .slider-tooltip-focus:after,
.emotion-4 .slider-tooltip-visible:after {
  content: '';
  position: absolute;
  top: 98%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip,
.emotion-4 .rheostat-handle:focus .slider-tooltip,
.emotion-4 .rheostat-handle:active .slider-tooltip {
  visibility: visible;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip-focus {
  visibility: hidden;
}

.emotion-4 .rheostat-handle:focus .slider-tooltip-focus,
.emotion-4 .rheostat-handle:active .slider-tooltip-focus {
  visibility: visible;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  position: absolute;
  top: -25px;
  left: 0;
  margin-left: 3px;
}

.emotion-9 {
  position: absolute;
  top: -25px;
  right: 0;
  margin-right: 3px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-11 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-13 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-15 {
  width: 100%;
  line-height: 1.5;
  min-height: 42px;
  padding: 8px 12px;
  border: 1px solid #ccc;
  background-color: #fafafa;
  font-size: 0.9rem;
  outline: none;
  height: 100%;
}

.emotion-15:focus {
  background-color: #fff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-17 svg.cancel-icon:hover {
  fill: #424242;
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-3"
    style={undefined}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="rheostat rheostat-horizontal "
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="rheostat-background"
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={30000}
          className="rheostat-handle"
          data-handle-key={0}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "0%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={50000}
          className="rheostat-handle"
          data-handle-key={1}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "100%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <div
          className="rheostat-progress"
          style={
            Object {
              "left": "0%",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-7 emotion-8"
        >
          30K
        </div>
        <div
          className="emotion-9 emotion-8"
        >
          50K
        </div>
      </div>
    </div>
    <div
      className="emotion-11 emotion-12"
    >
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-start-input"
          className="emotion-15 emotion-16"
          max={50000}
          name="start"
          onChange={[Function]}
          step={1}
          type="number"
          value={30000}
        />
      </div>
      <div
        className="emotion-17 emotion-12"
      >
        -
      </div>
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-end-input"
          className="emotion-15 emotion-16"
          min={30000}
          name="end"
          onChange={[Function]}
          step={1}
          type="number"
          value={50000}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render range with slider 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 16px;
  color: #424242;
  width: 100%;
}

.emotion-0 input,
.emotion-0 button,
.emotion-0 textarea,
.emotion-0 select {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
}

.emotion-0 *,
.emotion-0 *:before,
.emotion-0 *:after {
  box-sizing: border-box;
}

.emotion-4 .rheostat {
  overflow: visible;
  margin: 24px 12px;
}

.emotion-4 .rheostat-progress {
  background-color: #d8d8d8;
  position: absolute;
  background-color: #0B6AFF;
}

.emotion-4 .rheostat-handle {
  border: 1px solid #9a9a9a;
  background-color: #0B6AFF;
  background-color: #fff;
  border-radius: 50%;
  height: 24px;
  outline: none;
  z-index: 2;
  width: 24px;
  cursor: pointer;
}

.emotion-4 .rheostat-horizontal {
  height: 24px;
}

.emotion-4 .rheostat-background {
  height: 4px;
  background-color: #c7c7c7;
  top: 0px;
  width: 100%;
  position: relative;
}

.emotion-4 .rheostat-horizontal .rheostat-progress {
  height: 4px;
  top: 0;
}

.emotion-4 .rheostat-horizontal .rheostat-handle {
  margin-left: -12px;
  top: -10px;
}

.emotion-4 .slider-tooltip,
.emotion-4 .slider-tooltip-focus,
.emotion-4 .slider-tooltip-visible {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 6px 8px;
  position: absolute;
  z-index: 1;
  -webkit-transform: translate(-50%,-170%);
  -ms-transform: translate(-50%,-170%);
  transform: translate(-50%,-170%);
}

.emotion-4 .slider-tooltip-visible {
  visibility: visible;
}

.emotion-4 .slider-tooltip:after,
.emotion-4 .slider-tooltip-focus:after,
.emotion-4 .slider-tooltip-visible:after {
  content: '';
  position: absolute;
  top: 98%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip,
.emotion-4 .rheostat-handle:focus .slider-tooltip,
.emotion-4 .rheostat-handle:active .slider-tooltip {
  visibility: visible;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip-focus {
  visibility: hidden;
}

.emotion-4 .rheostat-handle:focus .slider-tooltip-focus,
.emotion-4 .rheostat-handle:active .slider-tooltip-focus {
  visibility: visible;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  position: absolute;
  top: -25px;
  left: 0;
  margin-left: 3px;
}

.emotion-9 {
  position: absolute;
  top: -25px;
  right: 0;
  margin-right: 3px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-11 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-13 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-15 {
  width: 100%;
  line-height: 1.5;
  min-height: 42px;
  padding: 8px 12px;
  border: 1px solid #ccc;
  background-color: #fafafa;
  font-size: 0.9rem;
  outline: none;
  height: 100%;
}

.emotion-15:focus {
  background-color: #fff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-17 svg.cancel-icon:hover {
  fill: #424242;
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-3"
    style={undefined}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="rheostat rheostat-horizontal "
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="rheostat-background"
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={30000}
          className="rheostat-handle"
          data-handle-key={0}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "0%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={50000}
          className="rheostat-handle"
          data-handle-key={1}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "100%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <div
          className="rheostat-progress"
          style={
            Object {
              "left": "0%",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-7 emotion-8"
        >
          30K
        </div>
        <div
          className="emotion-9 emotion-8"
        >
          50K
        </div>
      </div>
    </div>
    <div
      className="emotion-11 emotion-12"
    >
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-start-input"
          className="emotion-15 emotion-16"
          max={50000}
          name="start"
          onChange={[Function]}
          step={1}
          type="number"
          value={30000}
        />
      </div>
      <div
        className="emotion-17 emotion-12"
      >
        -
      </div>
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-end-input"
          className="emotion-15 emotion-16"
          min={30000}
          name="end"
          onChange={[Function]}
          step={1}
          type="number"
          value={50000}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render title 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 16px;
  color: #424242;
  width: 100%;
}

.emotion-0 input,
.emotion-0 button,
.emotion-0 textarea,
.emotion-0 select {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
}

.emotion-0 *,
.emotion-0 *:before,
.emotion-0 *:after {
  box-sizing: border-box;
}

.emotion-4 .rheostat {
  overflow: visible;
  margin: 24px 12px;
}

.emotion-4 .rheostat-progress {
  background-color: #d8d8d8;
  position: absolute;
  background-color: #0B6AFF;
}

.emotion-4 .rheostat-handle {
  border: 1px solid #9a9a9a;
  background-color: #0B6AFF;
  background-color: #fff;
  border-radius: 50%;
  height: 24px;
  outline: none;
  z-index: 2;
  width: 24px;
  cursor: pointer;
}

.emotion-4 .rheostat-horizontal {
  height: 24px;
}

.emotion-4 .rheostat-background {
  height: 4px;
  background-color: #c7c7c7;
  top: 0px;
  width: 100%;
  position: relative;
}

.emotion-4 .rheostat-horizontal .rheostat-progress {
  height: 4px;
  top: 0;
}

.emotion-4 .rheostat-horizontal .rheostat-handle {
  margin-left: -12px;
  top: -10px;
}

.emotion-4 .slider-tooltip,
.emotion-4 .slider-tooltip-focus,
.emotion-4 .slider-tooltip-visible {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 6px 8px;
  position: absolute;
  z-index: 1;
  -webkit-transform: translate(-50%,-170%);
  -ms-transform: translate(-50%,-170%);
  transform: translate(-50%,-170%);
}

.emotion-4 .slider-tooltip-visible {
  visibility: visible;
}

.emotion-4 .slider-tooltip:after,
.emotion-4 .slider-tooltip-focus:after,
.emotion-4 .slider-tooltip-visible:after {
  content: '';
  position: absolute;
  top: 98%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip,
.emotion-4 .rheostat-handle:focus .slider-tooltip,
.emotion-4 .rheostat-handle:active .slider-tooltip {
  visibility: visible;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip-focus {
  visibility: hidden;
}

.emotion-4 .rheostat-handle:focus .slider-tooltip-focus,
.emotion-4 .rheostat-handle:active .slider-tooltip-focus {
  visibility: visible;
}

.emotion-6 {
  margin: 0 0 8px;
  font-size: 1rem;
  color: #424242;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-8 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-10 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-12 {
  width: 100%;
  line-height: 1.5;
  min-height: 42px;
  padding: 8px 12px;
  border: 1px solid #ccc;
  background-color: #fafafa;
  font-size: 0.9rem;
  outline: none;
  height: 100%;
}

.emotion-12:focus {
  background-color: #fff;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-14 svg.cancel-icon:hover {
  fill: #424242;
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-3"
    style={undefined}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <h2
        className="emotion-6 emotion-7"
      >
        Mock RangeInput
      </h2>
      <div
        className="rheostat rheostat-horizontal "
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="rheostat-background"
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={30000}
          className="rheostat-handle"
          data-handle-key={0}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "0%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={30000}
          aria-valuenow={50000}
          className="rheostat-handle"
          data-handle-key={1}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "100%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <div
          className="rheostat-progress"
          style={
            Object {
              "left": "0%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="emotion-8 emotion-9"
    >
      <div
        className="emotion-10 emotion-9"
        direction="column"
      >
        <input
          aria-label="range-input-test-start-input"
          className="emotion-12 emotion-13"
          max={50000}
          name="start"
          onChange={[Function]}
          step={1}
          type="number"
          value={30000}
        />
      </div>
      <div
        className="emotion-14 emotion-9"
      >
        -
      </div>
      <div
        className="emotion-10 emotion-9"
        direction="column"
      >
        <input
          aria-label="range-input-test-end-input"
          className="emotion-12 emotion-13"
          min={30000}
          name="end"
          onChange={[Function]}
          step={1}
          type="number"
          value={50000}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should select default value 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 16px;
  color: #424242;
  width: 100%;
}

.emotion-0 input,
.emotion-0 button,
.emotion-0 textarea,
.emotion-0 select {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
}

.emotion-0 *,
.emotion-0 *:before,
.emotion-0 *:after {
  box-sizing: border-box;
}

.emotion-4 .rheostat {
  overflow: visible;
  margin: 24px 12px;
}

.emotion-4 .rheostat-progress {
  background-color: #d8d8d8;
  position: absolute;
  background-color: #0B6AFF;
}

.emotion-4 .rheostat-handle {
  border: 1px solid #9a9a9a;
  background-color: #0B6AFF;
  background-color: #fff;
  border-radius: 50%;
  height: 24px;
  outline: none;
  z-index: 2;
  width: 24px;
  cursor: pointer;
}

.emotion-4 .rheostat-horizontal {
  height: 24px;
}

.emotion-4 .rheostat-background {
  height: 4px;
  background-color: #c7c7c7;
  top: 0px;
  width: 100%;
  position: relative;
}

.emotion-4 .rheostat-horizontal .rheostat-progress {
  height: 4px;
  top: 0;
}

.emotion-4 .rheostat-horizontal .rheostat-handle {
  margin-left: -12px;
  top: -10px;
}

.emotion-4 .slider-tooltip,
.emotion-4 .slider-tooltip-focus,
.emotion-4 .slider-tooltip-visible {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 6px 8px;
  position: absolute;
  z-index: 1;
  -webkit-transform: translate(-50%,-170%);
  -ms-transform: translate(-50%,-170%);
  transform: translate(-50%,-170%);
}

.emotion-4 .slider-tooltip-visible {
  visibility: visible;
}

.emotion-4 .slider-tooltip:after,
.emotion-4 .slider-tooltip-focus:after,
.emotion-4 .slider-tooltip-visible:after {
  content: '';
  position: absolute;
  top: 98%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip,
.emotion-4 .rheostat-handle:focus .slider-tooltip,
.emotion-4 .rheostat-handle:active .slider-tooltip {
  visibility: visible;
}

.emotion-4 .rheostat-handle:hover .slider-tooltip-focus {
  visibility: hidden;
}

.emotion-4 .rheostat-handle:focus .slider-tooltip-focus,
.emotion-4 .rheostat-handle:active .slider-tooltip-focus {
  visibility: visible;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  position: absolute;
  top: -25px;
  left: 0;
  margin-left: 3px;
}

.emotion-9 {
  position: absolute;
  top: -25px;
  right: 0;
  margin-right: 3px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-11 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-13 svg.cancel-icon:hover {
  fill: #424242;
}

.emotion-15 {
  width: 100%;
  line-height: 1.5;
  min-height: 42px;
  padding: 8px 12px;
  border: 1px solid #ccc;
  background-color: #fafafa;
  font-size: 0.9rem;
  outline: none;
  height: 100%;
}

.emotion-15:focus {
  background-color: #fff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 svg.cancel-icon {
  cursor: pointer;
  fill: #595959;
  -webkit-flex-basis: 30px;
  -ms-flex-preferred-size: 30px;
  flex-basis: 30px;
}

.emotion-17 svg.cancel-icon:hover {
  fill: #424242;
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-3"
    style={undefined}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="rheostat rheostat-horizontal "
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="rheostat-background"
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={48000}
          aria-valuemin={30000}
          aria-valuenow={32000}
          className="rheostat-handle"
          data-handle-key={0}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "10%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <button
          aria-disabled={false}
          aria-label="slider-button"
          aria-valuemax={50000}
          aria-valuemin={32000}
          aria-valuenow={48000}
          className="rheostat-handle"
          data-handle-key={1}
          onClick={undefined}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "90%",
              "position": "absolute",
            }
          }
          tabIndex={0}
        />
        <div
          className="rheostat-progress"
          style={
            Object {
              "left": "10%",
              "width": "80%",
            }
          }
        />
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-7 emotion-8"
        >
          30K
        </div>
        <div
          className="emotion-9 emotion-8"
        >
          50K
        </div>
      </div>
    </div>
    <div
      className="emotion-11 emotion-12"
    >
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-start-input"
          className="emotion-15 emotion-16"
          max={48000}
          name="start"
          onChange={[Function]}
          step={1}
          type="number"
          value={32000}
        />
      </div>
      <div
        className="emotion-17 emotion-12"
      >
        -
      </div>
      <div
        className="emotion-13 emotion-12"
        direction="column"
      >
        <input
          aria-label="range-input-test-end-input"
          className="emotion-15 emotion-16"
          min={32000}
          name="end"
          onChange={[Function]}
          step={1}
          type="number"
          value={48000}
        />
      </div>
    </div>
  </div>
</div>
`;
